--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alagarasan | Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/images/images.png">
+    <link rel="icon" href="images/images.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -161,7 +161,7 @@ I’m eager to enhance my skills and contribute to real-world web projects.</p
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="/images/profile-3.jpeg" alt="">
+                        <img src="images/profile-3.jpeg" alt="">
                         <div class="text">Ms.A.Juli</div>
                         <p><b></b>
 Developed a responsive and visually engaging website for a dessert brand using HTML, CSS, and JavaScript.</p>
@@ -169,21 +169,21 @@ Developed a responsive and visually engaging website for a dessert brand using H
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/images/Dinesh.jpg" alt="">
+                        <img src="images/Dinesh.jpg" alt="">
                         <div class="text">Mstr.V.Dinesh Kumar</div>
                         <p><a style="color: aqua;" href="https://dinesh1-coder.github.io/Portfolio/"><b>Portfolio :</b></a> Developed a responsive portfolio website with modern design and smooth user experience using HTML, CSS, and JavaScript.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/images/Raja.jpg" alt="">
+                        <img src="images/Raja.jpg" alt="">
                         <div class="text">Mstr.S.Raja</div>
                         <p><a style="color: aqua;" href=""><b>Portfolio :</b></a> Developed a responsive portfolio website with modern design and smooth user experience using HTML, CSS, and JavaScript.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/images/profile-4.jpeg" alt="">
+                        <img src="images/profile-4.jpeg" alt="">
                         <div class="text">Mstr.S.Shandru</div>
                         <p><a style="color: aqua;" href=""><b>Portfolio :</b></a> Developed a responsive portfolio website with modern design and smooth user experience using HTML, CSS, and JavaScript.</p>
                     </div>
